added transitioning API header to other pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
     <li><a href="{{ 'get-started/' | relative_url }}">Start here...</a></li>
   </ul>
 
-  <li class="sidebar-title">Q Applets API</li>
+  <li class="sidebar-title">Q Applets API &nbsp;<i class="fa fa-star text-primary"></i></li>
   <ul class="sidebar-items">
     <li><a href="{{ 'applet-development/' | relative_url }}">Development overview</a></li>
     <li><a href="{{ 'applet-development/user-questions/' | relative_url }}">Form fields: questions</a></li>
@@ -16,15 +16,11 @@
         publishing</a></li>
   </ul>
 
-  <li class="sidebar-title">Q Developer API</li>
+  <li class="sidebar-title">Ressources</li>
   <ul class="sidebar-items">
-    <li><a href="{{ 'q-api-quick-start/' | relative_url }}">Quick start</a></li>
-    <li><a href="{{ 'q-cloud-or-local' | relative_url }}">Q Cloud or Localhost</a></li>
-    <li><a href="{{ 'contributed-links/' | relative_url }}">Community contributions</a></li>
-    <li><a href="{{ 'script-examples/' | relative_url }}">API examples &nbsp;<i class="fa fa-star text-primary"></i></a></li>
-    <li><a href="{{ 'q-zone-id-explanation' | relative_url }}">Understand zoneId&nbsp;</a></li>
     <li><a href="https://qforum.daskeyboard.com">Developer forum</a></li>
   </ul>
+
 
   <li class="sidebar-title">Q software updates</li>
   <ul class="sidebar-items">
@@ -43,7 +39,8 @@
     </li>
   </ul>
 
-  <li class="sidebar-title">Q Signals<span class="badge badge-warning pull-right">TRANSITIONING</span></li>
+  <li class="sidebar-title">Q Signals</li>
+  <li><span class="badge badge-warning">Transitioning to Q Applets API</span></li>
   <ul class="sidebar-items">
     <li>
       <ul>
@@ -82,4 +79,9 @@
         </li>
       </ul>
     </li>
+    <li><a href="{{ 'q-api-quick-start/' | relative_url }}">Quick start</a></li>
+    <li><a href="{{ 'q-cloud-or-local' | relative_url }}">Q Cloud or Localhost</a></li>
+    <li><a href="{{ 'contributed-links/' | relative_url }}">Community contributions</a></li>
+    <li><a href="{{ 'script-examples/' | relative_url }}">API examples</a></li>
+    <li><a href="{{ 'q-zone-id-explanation' | relative_url }}">Understand zoneId&nbsp;</a></li>
   </ul>
