feat(Signal API): Deprecated Cloud API for all signal API calls

--- a/_includes/script-examples/backend-url/cloud/deprecated.html
+++ b/_includes/script-examples/backend-url/cloud/deprecated.html
@@ -1,4 +1,3 @@
-<div class="alert alert-danger" role="alert">
-  This API is deprecated. Please use the 
-  <a href="{{ 'applet-development' | relative_url }}">Q Applets API</a>.
-</div>
+<span style="font-weight: bold; color: red; margin-left: 20px;" class="api-deprecated">
+  This API is deprecated.
+</span>
