Deprecated only the Q cloud API and keep the low level API documentation

--- a/_includes/script-examples/backend-url/cloud/deprecated.html
+++ b/_includes/script-examples/backend-url/cloud/deprecated.html
@@ -1,3 +1,3 @@
 <span style="font-weight: bold; color: red; margin-left: 20px;" class="api-deprecated">
-  This API is deprecated.
+  Cloud API deprecated: use localhost API or Q Applet API
 </span>
