--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,7 +40,7 @@
   </ul>
 
   <li class="sidebar-title">Q Signals</li>
-  <li><span class="badge badge-warning">Transitioning to Q Applets API</span></li>
+  <li><span class="badge badge-warning">Low level API</span></li>
   <ul class="sidebar-items">
     <li>
       <ul>
