Added errors, in order to test rake checklinks.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
             height="90">
         </div>
         <p class="site-footer__link-list">
-          <a href="https://www.daskeyboard.com/">www.daskeyboard.com</a> &bull;
-          <a href="https://twitter.com/daskeyboard">Twitter</a> &bull;
+          <a href="https://www.daskboard.com/">www.daskeyboard.com</a> &bull;
+          <a href="https://twter.com/daskeyboard">Twitter</a> &bull;
           <a href="https://github.com/daskeyboard">Github</a>
         </p>
 
