--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         </div>
         <p class="site-footer__link-list">
           <a href="https://www.daskboard.com/">www.daskeyboard.com</a> &bull;
-          <a href="https://twter.com/daskeyboard">Twitter</a> &bull;
+          <a href="https://twitter.com/daskeyboard">Twitter</a> &bull;
           <a href="https://github.com/daskeyboard">Github</a>
         </p>
 
