--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
             height="90">
         </div>
         <p class="site-footer__link-list">
-          <a href="https://www.daskboard.com/">www.daskeyboard.com</a> &bull;
+          <a href="/test">www.daskeyboard.com</a> &bull;
           <a href="https://twitter.com/daskeyboard">Twitter</a> &bull;
           <a href="https://github.com/daskeyboard">Github</a>
         </p>
