fix(Signal Effect): Fixed BREATH should be BREATHE

--- a/_includes/script-examples/signal-resource/create-signal/request-description.html
+++ b/_includes/script-examples/signal-resource/create-signal/request-description.html
@@ -55,7 +55,7 @@
         <span class="type">string</span>
         <span class="example">'SET_COLOR'</span>
         <span class="example">'BLINK'</span>
-        <span class="example">'BREATH'</span>
+        <span class="example">'BREATHE'</span>
         <span class="example">'COLOR_CYCLE'</span>
         <p class="description">Effect of the Signal</p>
       </td>
