--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,11 @@
   <meta name="keywords" content="{{page.tags}}{% if page.tags %}, {% endif %} {{page.keywords}}">
   
   <link rel="stylesheet" href="{{ "css/css-bootstrap/bootstrap.css"  | relative_url }}">
-  <link rel="stylesheet" href="{{ "css/main.css"  | relative_url }}"> 
-  
+  <link rel="stylesheet" href="{{ "css/main.css"  | relative_url }}">
+   
+  <script src="/js/vue.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Extended" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
   {% for css_name in page.extra_css %}
