--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,15 @@
     };
     firebase.initializeApp(config);
   </script> -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-254670-29"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-254670-29');
+  </script>
+
 </head>
