--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
         publishing</a></li>
   </ul>
 
-  <li class="sidebar-title">Ressources</li>
+  <li class="sidebar-title">Resources</li>
   <ul class="sidebar-items">
     <li><a href="https://qforum.daskeyboard.com">Developer forum</a></li>
   </ul>
